version 0.33, ?

* Initial support for multipart form data POST-ing as in RFC1867 has been added. 
   Several tags MULTIPART_FORM_DATA can be used for a url to post in a 
   configuration file, e.g. as in ./conf-examples/multipart-formdata-post.conf:
	
   MULTIPART_FORM_DATA="yourname=Michael"
   MULTIPART_FORM_DATA="filedescription=Cool text file with cool text inside"
   MULTIPART_FORM_DATA="htmlcode=<HTML></HTML>;type=text/html"
   MULTIPART_FORM_DATA="file=@cooltext.txt"
   MULTIPART_FORM_DATA="coolfiles=@fil1.gif,fil2.txt,fil3.html"

   Currently, the feature uses the strings provided AS_IS and does not generate
   any unique users, unique passwords or loads tokens from file.

   To prevent from sending "Expect: 100-continue", pass as a custom HTTP header
   CUSTOM_HEADER="Expect: "

   Still, should be tested as we do not have and server side for that.



version 0.32, 21/06/2007, svn 431

* Newly added tag per url RESPONSE_STATUS_ERRORS supports changes to the
   default set of response statuses considered by errors. By default 4xx without
   401 and 407 and all 5xx response codes are treated as errors.
   Now you can either add a status to the errors or remove it. Sign + adds, - removes.
   The syntaxes is a line of tokens separated by ',', where each tokens begins with either
   + or - and is followed by the response status number from 0 up to 600.
	
   For example,  the effect of RESPONSE_STATUS_ERRORS="+200,-404"
   is that 200 responses will be considered for that url as errors, whereas 404 
   will be considered as success. File ./conf-examples/resp_errors.conf added.

* Support of form-post tokens file (former credentials file) has been enhanced
   to use up to 16 tokens, which means up to 16 forms to fill.
   New separators added with the following supported: , : ; @ / and space.

* Fixed a bug with ramp-up being stopped occasionally a long prior
   to the clients number reached the desired CLIENTS_MAX_NUM.
